feat: agregue la funcionalidad de abrir la app del telefono

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrabajoPractico01">
+        <receiver
+            android:name=".ModoAvionReciver"
+            android:enabled="true"
+            android:exported="true">
+
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
